	  (requires new FETCHCMD_svn definition in bitbake.conf)
	- Change SVNDIR layout to be more unique (fixes #2644 and #2624)
	- Import persistent data store from trunk
	- Sync fetcher code with that in trunk, adding SRCREV support for svn
	- Add ConfigParsed Event after configuration parsing is complete
	- data.emit_var() - only call getVar if we need the variable

Changes in Bitbake 1.8.6:
	- Correctly redirect stdin when forking
	- If parsing errors are found, exit, too many users miss the errors
	- Remove supriours PREFERRED_PROVIDER warnings

Changes in Bitbake 1.8.4:
	- Make sure __inherit_cache is updated before calling include() (from Michael Krelin)
	- Fix bug when target was in ASSUME_PROVIDED (#2236)
	- Raise ParseError for filenames with multiple underscores instead of infinitely looping (#2062)
	- Fix invalid regexp in BBMASK error handling (missing import) (#1124)
	- Don't run build sanity checks on incomplete builds
	- Promote certain warnings from debug to note 2 level
	- Update manual

Changes in Bitbake 1.8.2:
	- Catch truncated cache file errors
	- Add PE (Package Epoch) support from Philipp Zabel (pH5)
	- Add code to handle inter-task dependencies
	- Allow operations other than assignment on flag variables
	- Fix cache errors when generation dotGraphs

Changes in Bitbake 1.8.0:
	- Release 1.7.x as a stable series

Changes in BitBake 1.7.x:
	- Major updates of the dependency handling and execution
	  of tasks. Code from bin/bitbake replaced with runqueue.py
	  and taskdata.py
	- New task execution code supports multithreading with a simplistic
	  threading algorithm controlled by BB_NUMBER_THREADS
	- Change of the SVN Fetcher to keep the checkout around
	  courtsey of Paul Sokolovsky (#1367)
	- PATH fix to bbimage (#1108)
	- Allow debug domains to be specified on the commandline (-l)
	- Allow 'interactive' tasks
	- Logging message improvements
	- Drop now uneeded BUILD_ALL_DEPS variable
	- Add support for wildcards to -b option